Do Loading and Offline indicators with jQuery animations not CSS to avoid flicker

--- a/style.css
+++ b/style.css
@@ -105,22 +105,11 @@ div#menu button.loading {
     color: rgba(255, 200, 120, 1);
     display: none;
 }
-button.loadingblink {
-    animation: blinker 2s linear 1;
-    display: inline-block !important;
-}
 div#menu button.problem {
     background-color: rgba(80, 0, 0, 0.4);
     border: 1px solid rgba(255, 0, 0, 1);
     color: rgba(255, 0, 0, 1);
-    animation: blinker 2s linear infinite;
     display: none;
-}
-@keyframes blinker {
-  0%   { opacity: 0; }
-  25%  { opacity: 1; }
-  75%  { opacity: 1; }
-  100% { opacity: 0; }
 }
 
 /* Right box styles */
